Replace social icons with twitter follow button

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,8 +1,5 @@
 <div class="header">
   <a href="/" class="title">Nisanth's Blog</a>
   
-  <nav class="social">
-    <a href="https://twitter.com/nisanth074" target="_blank" class="twitter"></a>
-    <a href="https://github.com/nisanth074" target="_blank" class="github"></a>
-  </nav>
+  <a class="twitter-follow-button" href="https://twitter.com/nisanth074" data-show-count="false"> Follow @nisanth074</a>
 </div>
