--- a/themes/digitalocean/layouts/partials/head.html
+++ b/themes/digitalocean/layouts/partials/head.html
@@ -11,4 +11,5 @@
   <!-- // <script src="{{ .Site.BaseUrl }}/bower_components/highlightjs/highlight.pack.js"></script> -->
   <script src="{{ .Site.BaseUrl }}/bower_components/zepto/zepto.min.js"></script>
   <!-- // <script src="{{ .Site.BaseUrl }}/js/initHighlightingOnLoad.js"></script> -->
+  <script src="{{ .Site.BaseUrl }}/js/twitterWidgets.js"></script>
 </head>
