Add about page. Remove footer. Move scripts to bin.

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,5 +1,13 @@
 <div class="header">
-  <a href="/" class="title">Nisanth's Blog</a>
+  <nav class="mainNav">
+    {{ if eq . "about" }}
+      <a href="/" class="title">Nisanth's Blog</a>
+      <a href="/about" class="active">About</a>
+    {{ else }}
+      <a href="/" class="title active">Nisanth's Blog</a>
+      <a href="/about">About</a>
+    {{ end }}
+  </nav>
   
   <a class="twitter-follow-button" href="https://twitter.com/nisanth074" data-show-count="false"> Follow @nisanth074</a>
 </div>
