--- a/themes/digitalocean/layouts/index.html
+++ b/themes/digitalocean/layouts/index.html
@@ -6,23 +6,15 @@
       {{ partial "header.html" . }}
 
       <div class="postsContainer fadeInUp">
-        {{ $pagesCount := len .Data.Pages }}
-        {{ range $index, $page := .Data.Pages }}
-          <div class="post">
-            <h1 class="postTitle"><a href="{{ .Permalink }}">{{ .Title }}</a></h1>
-
-            <p class="postDate">{{ .Date.Format "Mon, Jan 2, 2006" }}</p>
-
-            <!-- <div class="postContent">{{ .Content }}</div> -->
-          </div>
-
-          {{ if lt (add $index 1) $pagesCount }}
-            <!-- <hr> -->
+        {{ range .Data.Pages }}
+          {{ if eq .Section "posts"}}
+            <div class="post">
+              <h1 class="postTitle"><a href="{{ .Permalink }}">{{ .Title }}</a></h1>
+              <p class="postDate">{{ .Date.Format "Mon, Jan 2, 2006" }}</p>
+            </div>
           {{ end }}
         {{ end }}
       </div>
-
-      {{ partial "footer.html" . }}
     </div>
   </body>
 </html>
