--- a/themes/digitalocean/layouts/partials/head.html
+++ b/themes/digitalocean/layouts/partials/head.html
@@ -2,14 +2,16 @@
   <title>Nisanth's Blog</title>
   <link rel="shortcut icon" href="/favicon-a409055.ico">
 
-  <link rel="stylesheet" href="{{ .Site.BaseUrl }}/bower_components/normalize.css/normalize.css">
-  <!-- <link rel="stylesheet" href="{{ .Site.BaseUrl }}/css/animate.css/animate.min.css"> -->
-  <link rel="stylesheet" href="{{ .Site.BaseUrl }}/css/digitalocean.css">
-  <link rel="stylesheet" href="{{ .Site.BaseUrl }}/css/pygments-github2.css">
+  <link rel="stylesheet" href="{{ .Site.BaseURL }}/bower_components/normalize.css/normalize.css">
+  <!-- <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/animate.css/animate.min.css"> -->
+  <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/fonts.css">
+  <link href='https://fonts.googleapis.com/css?family=Arbutus+Slab' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/digitalocean.css">
+  <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/pygments-github2.css">
 
-  <link rel="stylesheet" href="{{ .Site.BaseUrl }}/bower_components/highlightjs/styles/github.css">
-  <!-- // <script src="{{ .Site.BaseUrl }}/bower_components/highlightjs/highlight.pack.js"></script> -->
-  <script src="{{ .Site.BaseUrl }}/bower_components/zepto/zepto.min.js"></script>
-  <!-- // <script src="{{ .Site.BaseUrl }}/js/initHighlightingOnLoad.js"></script> -->
-  <script src="{{ .Site.BaseUrl }}/js/twitterWidgets.js"></script>
+  <link rel="stylesheet" href="{{ .Site.BaseURL }}/bower_components/highlightjs/styles/github.css">
+  <!-- // <script src="{{ .Site.BaseURL }}/bower_components/highlightjs/highlight.pack.js"></script> -->
+  <script src="{{ .Site.BaseURL }}/bower_components/zepto/zepto.min.js"></script>
+  <!-- // <script src="{{ .Site.BaseURL }}/js/initHighlightingOnLoad.js"></script> -->
+  <script src="{{ .Site.BaseURL }}/js/twitterWidgets.js"></script>
 </head>
