Style code snippets with old github theme

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/fonts.css">
   <link href='https://fonts.googleapis.com/css?family=Arbutus+Slab' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/digitalocean.css">
-  <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/pygments-github2.css">
+  <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/pygments-github.css">
 
   <link rel="stylesheet" href="{{ .Site.BaseURL }}/bower_components/highlightjs/styles/github.css">
   <!-- // <script src="{{ .Site.BaseURL }}/bower_components/highlightjs/highlight.pack.js"></script> -->
