--- a/static/css/pygments-github2015.css
+++ b/static/css/pygments-github2015.css
@@ -4,7 +4,7 @@
  */
 
 /*.hll { background-color: #f8f8f8; border: 1px solid #ccc; padding: 6px 10px; border-radius: 3px; }*/
-.highlight { border: 1px solid #ccc; padding: 12px 10px; border-radius: 3px; }
+/*.highlight { border: 1px solid #ccc; padding: 12px 10px; border-radius: 3px; }*/
 .c { color: #999988; font-style: italic; }
 .err { color: #a61717; background-color: #e3d2d2; }
 /*.k { font-weight: bold; }*/
