--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -8,10 +8,5 @@
   <link href='https://fonts.googleapis.com/css?family=Arbutus+Slab' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/digitalocean.css">
   <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/pygments-github.css">
-
-  <link rel="stylesheet" href="{{ .Site.BaseURL }}/bower_components/highlightjs/styles/github.css">
-  <!-- // <script src="{{ .Site.BaseURL }}/bower_components/highlightjs/highlight.pack.js"></script> -->
-  <script src="{{ .Site.BaseURL }}/bower_components/zepto/zepto.min.js"></script>
-  <!-- // <script src="{{ .Site.BaseURL }}/js/initHighlightingOnLoad.js"></script> -->
-  <script src="{{ .Site.BaseURL }}/js/twitterWidgets.js"></script>
+  <!-- // <script src="{{ .Site.BaseURL }}/js/twitterWidgets.js"></script> -->
 </head>
