Delay twitter widget load

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -2,11 +2,12 @@
   <title>Nisanth's Blog</title>
   <link rel="shortcut icon" href="/favicon-a409055.ico">
 
+  <!-- Add stylesheets -->
+
   <link rel="stylesheet" href="{{ .Site.BaseURL }}/bower_components/normalize.css/normalize.css">
   <!-- <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/animate.css/animate.min.css"> -->
   <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/fonts.css">
   <link href='https://fonts.googleapis.com/css?family=Arbutus+Slab' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/digitalocean.css">
   <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/pygments-github.css">
-  <!-- // <script src="{{ .Site.BaseURL }}/js/twitterWidgets.js"></script> -->
 </head>
