--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,7 +3,9 @@
     <img src="{{ .Site.BaseURL }}/images/avatar.jpeg" class="avatar"></img>
   </a>
   <nav class="mainNav">
-    <a href="/about" class="active">About</a>
-    <a class="twitter-follow-button" href="https://twitter.com/nisanth074" data-show-count="false"></a>
+	  <ul>
+	  	<li><a class="twitter-follow-button" href="https://twitter.com/nisanth074" data-show-count="false"></a></li>
+	    <li><a href="/about" class="active">About</a></li>
+	  </ul>
   </nav>
 </div>
