Add a page with a list of books I like. Remove twitter follow button.

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -4,7 +4,7 @@
   </a>
   <nav class="mainNav">
 	  <ul>
-	  	<li><a class="twitter-follow-button" href="https://twitter.com/nisanth074" data-show-count="false"></a></li>
+	    <li><a href="/books" class="active">Books I like</a></li>
 	    <li><a href="/about" class="active">About</a></li>
 	  </ul>
   </nav>
