Clean up css. Use rems for font size.

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -4,10 +4,15 @@
 
   <!-- Add stylesheets -->
 
-  <link rel="stylesheet" href="{{ .Site.BaseURL }}/bower_components/normalize.css/normalize.css">
-  <!-- <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/animate.css/animate.min.css"> -->
-  <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/fonts.css">
+  <!-- Fonts -->
   <link href='https://fonts.googleapis.com/css?family=Arbutus+Slab' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/digitalocean.css">
+  <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/vendor/fonts.css">
+
+  <link rel="stylesheet" href="{{ .Site.BaseURL }}/bower_components/normalize.css/normalize.css">
+  <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/reset.css">
+  <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/main.css">
+  <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/animations.css">
+
+  <!-- Syntax highlighting -->
   <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/pygments-github.css">
 </head>
