New header styling

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -4,8 +4,9 @@
   </a>
   <nav class="mainNav">
 	  <ul>
-	    <li><a href="/books" class="active">Books I like</a></li>
-	    <li><a href="/about" class="active">About</a></li>
+	    <li><a href="/">Blog</a></li>
+	    <li><a href="/books">Library</a></li>
+	    <li><a href="/about">About</a></li>
 	  </ul>
   </nav>
 </div>
