--- a/static/css/main.css
+++ b/static/css/main.css
@@ -68,18 +68,20 @@ code {
   line-height: 1.8;
 }
 
-.main {
-  min-height: 100%;
-
-  position: relative;
-  margin-left: auto;
-  margin-right: auto;
-}
-
 hr {
   margin-top: 48px;
   margin-bottom: 48px;
   border-top: 1px solid #eee;
+}
+
+.main {
+  min-height: 100%;
+  width: 704px;
+  padding-left: 40px;
+
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /*
@@ -87,20 +89,18 @@ Header
 */
 
 .header {
-  padding-top: 18px;
-  padding-bottom: 18px;
-  padding-left: 40px;
-  padding-right: 40px;
+  margin-top: 48px;
 
   height: 68px; /* 18 (paddingTop) + 32 (avatarHeight) + 18 (paddingBottom) */
   width: 100%;
-
-  border-bottom: 1px solid #e7e7e7;
 }
 
 .avatar {
+  position: absolute;
+  left: -122px;
   height: 32px;
   width: 32px;
+
   border-radius: 4px;
 }
 
@@ -113,11 +113,12 @@ Header
 
 .mainNav {
   height: 32px;
-  float: right; 
 }
 
 .mainNav ul {
   height: 100%;
+  padding: 0px;
+
   list-style: none;
 }
 
@@ -128,12 +129,11 @@ Header
   float: left;
 }
 
-.mainNav li:not(:first-child) {
-  margin-left: 40px;
+.mainNav li:not(:last-child) {
+  margin-right: 40px;
 }
 
 .pageContentContainer {
-  width: 704px;
   margin-left: auto;
   margin-right: auto;
 
