Change camel case in css to hyphens

--- a/layouts/about/single.html
+++ b/layouts/about/single.html
@@ -5,7 +5,7 @@
     <div class="main">
       {{ partial "header.html" . }}
       
-      <div class="pageContentContainer fadeInUp">
+      <div class="page fade-in-up">
         {{ .Content }}
       </div>
     </div>
