--- a/layouts/books/single.html
+++ b/layouts/books/single.html
@@ -5,8 +5,8 @@
     <div class="main">
       {{ partial "header.html" . }}
       
-      <div class="pageContentContainer fadeInUp">
-        <div class="pageContent">
+      <div class="page fade-in-up">
+        <div class="page-content">
           {{ .Content }}
         </div>
       </div>
