--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,7 +2,7 @@
   <a href="{{ .Site.BaseURL }}">
     <img src="{{ .Site.BaseURL }}/images/avatar.jpeg" class="avatar"></img>
   </a>
-  <nav class="mainNav">
+  <nav class="top-nav">
 	  <ul>
 	    <li><a href="/">Blog</a></li>
 	    <li><a href="/books">Library</a></li>
