--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,12 +5,12 @@
     <div class="main">
       {{ partial "header.html" . }}
 
-      <div class="pageContentContainer fadeInUp">
-        <div class="postsList">
+      <div class="page fade-in-up">
+        <div class="posts-list">
           {{ range .Data.Pages }}
             {{ if eq .Section "posts"}}
-              <div class="postSummary">
-                <h1 class="postTitle"><a href="{{ .Permalink }}">{{ .Title }}</a></h1>
+              <div class="post-summary">
+                <h1 class="post-title"><a href="{{ .Permalink }}">{{ .Title }}</a></h1>
                 {{ partial "posts/date.html" . }}
               </div>
             {{ end }}
