--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,12 +1,14 @@
-<div class="header">
-  <a href="{{ .Site.BaseURL }}">
-    <img src="{{ .Site.BaseURL }}/images/avatar.jpeg" class="avatar"></img>
-  </a>
-  <nav class="top-nav">
-	  <ul>
-	    <li><a href="/">Blog</a></li>
-	    <li><a href="/books">Library</a></li>
-	    <li><a href="/about">About</a></li>
-	  </ul>
+<div class="header frame">
+  <div class="avatar-container bit-25">
+    <a href="{{ .Site.BaseURL }}">
+      <img src="{{ .Site.BaseURL }}/images/avatar.jpeg" class="avatar"></img>
+    </a>
+  </div>
+  <nav class="top-nav bit-75">
+    <ul>
+      <li><a href="/">Blog</a></li>
+      <li><a href="/books">Library</a></li>
+      <li><a href="/about">About</a></li>
+    </ul>
   </nav>
 </div>
