--- a/layouts/about/single.html
+++ b/layouts/about/single.html
@@ -2,10 +2,10 @@
   {{ partial "head.html" . }}
 
   <body>
-    <div class="main">
-      {{ partial "header.html" . }}
-      
-      <div class="page fade-in-up">
+    {{ partial "header.html" . }}
+
+    <div class="main frame">
+      <div class="page bit-50 fade-in-up">
         {{ .Content }}
       </div>
     </div>
