--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,10 +2,10 @@
   {{ partial "head.html" . }}
 
   <body>
-    <div class="main">
-      {{ partial "header.html" . }}
+    {{ partial "header.html" . }}
 
-      <div class="page fade-in-up">
+    <div class="main frame">
+      <div class="page bit-50 fade-in-up">
         <div class="posts-list">
           {{ range .Data.Pages }}
             {{ if eq .Section "posts"}}
