--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -7,7 +7,7 @@
   <nav class="top-nav bit-75">
     <ul>
       <li><a href="/">Blog</a></li>
-      <li><a href="/books">Library</a></li>
+      <li><a href="/library">Library</a></li>
       <li><a href="/about">About</a></li>
     </ul>
   </nav>
