Move to a two column layout

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,14 +1,15 @@
-<div class="header frame">
-  <div class="avatar-container bit-25">
-    <a href="{{ .Site.BaseURL }}">
-      <img src="{{ .Site.BaseURL }}/images/avatar.jpeg" class="avatar"></img>
-    </a>
+<div class="frame">
+  <div class="header bit-60">
+    <div class="avatar-container bit-50">
+      <a href="{{ .Site.BaseURL }}">
+        <img src="{{ .Site.BaseURL }}/images/avatar.jpeg" class="avatar"></img>
+      </a>
+    </div>
+    <nav class="top-nav bit-50">
+      <ul>
+        <li><a href="/library">Library</a></li>
+        <li><a href="/about">About</a></li>
+      </ul>
+    </nav>
   </div>
-  <nav class="top-nav bit-75">
-    <ul>
-      <li><a href="/">Blog</a></li>
-      <li><a href="/library">Library</a></li>
-      <li><a href="/about">About</a></li>
-    </ul>
-  </nav>
 </div>
