Reduce left and right margins on mobile and ipad

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,5 +1,5 @@
 <div class="frame">
-  <div class="header bit-60">
+  <div class="header">
     <div class="avatar-container bit-50">
       <a href="{{ .Site.BaseURL }}">
         <img src="{{ .Site.BaseURL }}/images/avatar.jpeg" class="avatar"></img>
