Use min-width instead of min-device-width in media queries

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -102,7 +102,7 @@ Header
   margin-right: 20%;
 }
 
-@media (max-device-width: 414px) { /* iPhone 6 Plus width */
+@media (max-width: 414px) { /* iPhone 6 Plus width */
   .header, .page {
     margin-left: 8%;
     margin-right: 8%;
@@ -110,7 +110,7 @@ Header
   }
 }
 
-@media (min-device-width: 414px) and (max-device-width: 768px) { /* iPad width */
+@media (min-width: 414px) and (max-width: 768px) { /* iPad width */
   .header, .page {
     margin-left: 12%;
     margin-right: 12%;
