--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -3,17 +3,23 @@
   <link rel="shortcut icon" href="/favicon-a409055.ico">
 
   <!-- Fonts -->
+
   <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/vendor/fonts.css">
 
-  <!-- Vendor Stylesheets -->
+  <!-- Vendor stylesheets -->
+
   <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/vendor/lemonade.css">
   <link rel="stylesheet" href="{{ .Site.BaseURL }}/bower_components/normalize.css/normalize.css">
-
   <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/lemonade-custom.css">
   <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/reset.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/components/message.min.css">
+
+  <!-- Custom stylesheets -->
+
   <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/main.css">
   <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/animations.css">
+  <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/pygments-github.css"> <!-- Custom syntax highlighting -->
 
-  <!-- Syntax highlighting -->
-  <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/pygments-github.css">
+  <!-- Vendor javascripts -->
+  <script type="text/javascript" src="{{ .Site.BaseURL }}/bower_components/particles.js/particles.js"></script>
 </head>
