--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,15 +1,15 @@
 <div class="frame">
   <div class="header bit-60">
-    <div class="avatar-container bit-50">
-      <a href="{{ .Site.BaseURL }}">
-        <img src="{{ .Site.BaseURL }}/images/avatar.jpeg" class="avatar"></img>
-      </a>
-    </div>
-    <nav class="top-nav bit-50">
+    <nav class="top-nav bit-100">
+      <a class="title">Nisanth Chunduru</a>
       <ul>
         <li><a href="/library">Library</a></li>
         <li><a href="/about">About</a></li>
       </ul>
     </nav>
+    <img src="{{ .Site.BaseURL }}/images/avatar.jpg" class="avatar"></img>
+    <p>Ruby developer @SupportBee. BITSian from Goa.</p>
+    <div class="social">
+    </div>
   </div>
 </div>
