Update Medium blurb

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -13,7 +13,7 @@
             Moving to Medium
           </div>
           <p>
-            Hey visitor! I've decided to publish newer posts on <a href="https://medium.com/@nisanth074">Medium</a> to reach out to a larger audience.
+            Hey visitor! I've decided to move my blog to <a href="https://medium.com/@nisanth074">Medium</a> to reach out to a larger audience.
             <br>
             <br>
             Please follow me on <a href="https://medium.com/@nisanth074">Medium</a>.</p>
