--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -8,7 +8,7 @@
       </ul>
     </nav>
     <img src="{{ .Site.BaseURL }}/images/avatar.jpg" class="avatar"></img>
-    <p>Ruby developer @SupportBee. BITSian from Goa.</p>
+    <p>Hacker @SupportBee. Digital Nomad.</p>
     <div class="social">
     </div>
   </div>
