--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -22,4 +22,5 @@
 
   <!-- Vendor javascripts -->
   <script type="text/javascript" src="{{ .Site.BaseURL }}/bower_components/particles.js/particles.js"></script>
+  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 </head>
