--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,13 +3,16 @@
     <nav class="top-nav bit-100">
       <a class="title">Nisanth Chunduru</a>
       <ul>
-        <li><a href="/library">Library</a></li>
+        <li><a href="/library">Books I like</a></li>
         <li><a href="/about">About</a></li>
+        <li>
+        </li>
       </ul>
     </nav>
     <img src="{{ .Site.BaseURL }}/images/avatar.jpg" class="avatar"></img>
-    <p>Hacker @SupportBee. Digital Nomad.</p>
-    <div class="social">
+    <p>Ruby Developer @SupportBee. Digital Nomad.</p>
+    <div style="margin-top: 8px; text-align: center;">
+      <a href="https://twitter.com/nisanth074" class="twitter-follow-button" data-dnt="true">Follow @nisanth074</a>
     </div>
   </div>
 </div>
