Remove the blurb about moving to Medium. Port posts on Medium back here.

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -10,7 +10,9 @@
       </ul>
     </nav>
     <img src="{{ .Site.BaseURL }}/images/avatar.jpg" class="avatar"></img>
-    <p>Ruby Developer @SupportBee. Digital Nomad.</p>
+    <p>
+      Ruby Developer. Backend & Infrastructure Lead <a href="https:/twitter.com/SupportBee">@SupportBee<a>.
+    </p>
     <div style="margin-top: 8px; text-align: center;">
       <a href="https://twitter.com/nisanth074" class="twitter-follow-button" data-dnt="true">Follow @nisanth074</a>
     </div>
