Remove fade up animation for blog posts and other content

--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -3,7 +3,7 @@
 
   <body>
     <div class="main frame">
-      <div class="page bit-60 fade-in-up">
+      <div class="page bit-60">
         <a href="/" style="font-size: 1.5rem;">← Go back to home page</a>
 
         <div class="post">
