--- a/layouts/about/single.html
+++ b/layouts/about/single.html
@@ -5,7 +5,7 @@
     {{ partial "header.html" . }}
 
     <div class="main frame">
-      <div class="page bit-60 fade-in-up">
+      <div class="page bit-60">
         {{ .Content }}
       </div>
     </div>
