--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,7 +7,7 @@
     {{ partial "header.html" . }}
 
     <div class="main frame">
-      <div class="page bit-60 fade-in-up">
+      <div class="page bit-60">
         <div class="posts-list">
           {{ range .Data.Pages }}
             {{ if eq .Section "posts"}}
