Redesign the site's header

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,20 +1,13 @@
 <div class="frame">
   <div class="header bit-60">
     <nav class="top-nav bit-100">
-      <a class="title">Nisanth Chunduru</a>
+      <a href="/"><h1 class="logo">NC</h1></a>
       <ul>
         <li><a href="/library">Books I like</a></li>
-        <li><a href="/about">About</a></li>
+        <li><a href="/about">About Me</a></li>
         <li>
         </li>
       </ul>
     </nav>
-    <img src="{{ .Site.BaseURL }}/images/avatar.jpg" class="avatar"></img>
-    <p>
-      Ruby Developer. Backend & Infrastructure Lead <a href="https:/twitter.com/SupportBee">@SupportBee<a>.
-    </p>
-    <div style="margin-top: 8px; text-align: center;">
-      <a href="https://twitter.com/nisanth074" class="twitter-follow-button" data-dnt="true">Follow @nisanth074</a>
-    </div>
   </div>
 </div>
