Change site title

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,5 +1,5 @@
 <head>
-  <title>NC</title>
+  <title>Nisanth Chunduru</title>
   <link rel="shortcut icon" href="/favicon-a409055.ico">
 
   <!-- Fonts -->
