Vertically align links in top nav

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,7 +1,7 @@
 <div class="frame">
   <div class="header bit-60">
     <nav class="top-nav bit-100">
-      <a href="/"><h1 class="logo">NC</h1></a>
+      <a class="logo" href="/"><h1 class="logo-text">NC</h1></a>
       <ul>
         <li><a href="/library">Books I like</a></li>
         <li><a href="/about">About Me</a></li>
