--- a/static/css/main.css
+++ b/static/css/main.css
@@ -134,14 +134,6 @@ Header
   border-radius: 20px;
 }
 
-.logo {
-  font-weight: 700;
-  font-size: 4rem;
-  letter-spacing: 3px;
-  color: #121212;
-  display: inline-block;
-}
-
 .header a {
   text-decoration: none;
   font-size: 13px;
@@ -167,9 +159,24 @@ Header
   margin-right: auto;
 }
 
-.top-nav ul {
-  float: right;
+.top-nav {
+  display: flex;
+  align-items: center;
+}
 
+.logo {
+  flex-grow: 1;
+}
+
+.logo-text {
+  font-weight: 700;
+  font-size: 4rem;
+  letter-spacing: 3px;
+  color: #121212;
+  display: inline-block;
+}
+
+.top-nav ul {
   padding: 0px;
   list-style: none;
 }
