--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3,9 +3,9 @@
 }
 
 html {
-  /*font-family: 'ff-yoga-web-pro', Helvetica, Arial, sans-serif;*/
   font-family: 'proxima-nova';
-  font-size: 62.5%; /* https://developer.mozilla.org/en/docs/Web/CSS/font-size */
+  /* font-size: 62.5%;  https://developer.mozilla.org/en/docs/Web/CSS/font-size */
+  font-size: 16px;
 }
 
 body {
@@ -13,19 +13,32 @@ body {
   -webkit-font-smoothing: subpixel-antialiased;
 }
 
+/* Use font sizes suggested by http://type-scale.com/ */
+/* Select 1.200 - Minor Third as the scale */
 h1 {
-  /*font-family: 'ff-yoga-web-pro', Helvetica, Arial, sans-serif;*/
-  font-family: 'proxima-nova';
-  font-size: 4.6rem;
-  /*font-weight: 700;*/
-  font-weight: 300;
-  line-height: 1.2;
-  /*color: #222;*/
-  color: rgb(91, 84, 91);
+  font-size: 2.074em;
+}
+h2 {
+  font-size: 1.728em;
+}
+h3 {
+  font-size: 1.44em;
+}
+h4 {
+  font-size: 1.2em;
+}
+p {
+  font-size: 1em;
+}
+code {
+  /*font-size: 0.707em;*/
+}
+
+h1 {
+  color: #121212;
 }
 
 h2 {
-  font-size: 2.8rem;
   color: #222;
 
   margin-top: 23px;
@@ -33,16 +46,15 @@ h2 {
 }
 
 h3 {
-  font-size: 2.3rem;
   color: #222;
 
   margin-top: 34.5px;
 }
 
 p, ul {
-  font-size: 2.3rem;
+  font-size: 1em;
   font-weight: normal;
-  line-height: 3.45rem;
+  line-height: 1.76;
   color: #313131;
 }
 
@@ -54,7 +66,7 @@ blockquote {
 
 a {
   text-decoration: none;
-  color: #43aea8;
+  color: #0FACF3;
 }
 
 pre {
@@ -69,8 +81,7 @@ pre {
 
 code {
   font-family: Monaco, monospace;
-  font-size: 1.46rem;
-  line-height: 1.8;
+  line-height: 1.5;
 }
 
 code span {
@@ -96,7 +107,7 @@ hr {
   min-height: 100%;
 
   position: relative;
-  margin-top: 60px;
+  margin-top: 20px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -134,7 +145,7 @@ Header
   border-radius: 20px;
 }
 
-.header a {
+.header ul a {
   text-decoration: none;
   font-size: 13px;
   letter-spacing: 1.5px;
@@ -170,7 +181,7 @@ Header
 
 .logo-text {
   font-weight: 700;
-  font-size: 4rem;
+  font-size: 40px;
   letter-spacing: 3px;
   color: #121212;
   display: inline-block;
@@ -195,7 +206,7 @@ Header
   margin-left: 20%;
 
   padding-top: 32px;
-  padding-bottom: 120px;
+  padding-bottom: 32px;
 }
 
 .page ul {
@@ -212,17 +223,9 @@ Header
   color: #222;
 }
 
-.posts-list .post-title {
-  font-size: 2.8rem;
-}
-
 .post-date {
-  font-size: 1.863rem;
-  font-weight: 400;
   line-height: 1.6767rem;
-  color: #b1b2b2;
-
-  margin-top: 16.6px;
+  color: #3ABBF5;
 }
 
 .post-content {
