Add an "external link" icon beside the github link in the top nav

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -5,6 +5,7 @@
   <!-- Fonts -->
 
   <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/vendor/fonts.css">
+  <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
 
   <!-- Vendor stylesheets -->
 
