--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,9 +3,17 @@
     <nav class="top-nav bit-100">
       <a class="logo" href="/"><h1 class="logo-text">NC</h1></a>
       <ul>
-        <li><a href="/library">Books I like</a></li>
-        <li><a href="/about">About Me</a></li>
         <li>
+          <a href="/library">Books I like</a>
+        </li>
+        <li>
+          <a href="/about">About Me</a>
+        </li>
+        <li>
+          <a href="https://github.com/nisanth074" target="_blank">
+            Github
+            <i style="height: 13px; width: 13px; vertical-align: middle; margin-top: -4px; margin-left: -1px;" data-feather="external-link"></i>
+          </a>
         </li>
       </ul>
     </nav>
