Display a notice saying I've moved the blog to wordpress

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -6,6 +6,7 @@
 
   <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/vendor/fonts.css">
   <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
+  <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 
   <!-- Vendor stylesheets -->
 
