--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,6 +6,17 @@
 
     <div class="main frame">
       <div class="page bit-60">
+        <div class="notice">
+          <div class="notice-icon">
+            <i class="fas fa-info-circle"></i>
+          </div>
+          <div class="notice-content">
+            I've moved my blog to WordPress
+            <a href="https://nisanthchunduru.wordpress.com">nisanthchunduru.wordpress.com</a>
+            so it becomes easy for me to publish more often. You'll find my latest posts there.
+          </div>
+        </div>
+        
         <div class="posts-list">
           {{ range .Data.Pages }}
             {{ if eq .Section "posts"}}
