Move notice above the header

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,3 +1,13 @@
+<div class="notice">
+  <div class="notice-icon">
+    <i class="fas fa-info-circle"></i>
+  </div>
+  <div class="notice-content">
+    I've moved my blog to WordPress
+    <a href="https://nisanthchunduru.wordpress.com">nisanthchunduru.wordpress.com</a>
+    so it becomes easy for me to publish more often. You'll find my latest posts there.
+  </div>
+</div>
 <div class="frame">
   <div class="header bit-60">
     <nav class="top-nav bit-100">
