--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -6,7 +6,8 @@
 
   <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/vendor/fonts.css">
   <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
-  <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+  <!-- <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script> -->
+  <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
 
   <!-- Vendor stylesheets -->
 
